<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background0"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/baseline_access_alarm_24" />

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timerTextView"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/wordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="Word"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/scoreTextView"
            android:textColor="#000000"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/restartButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="#FDD223"
                android:gravity="center"
                android:text="@string/restartButton"
                android:textColor="@color/black"
                android:visibility="visible"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/backToCategoryButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="#FDD223"
                android:gravity="center"
                android:text="@string/backToCategoryButton"
                android:textColor="@color/black"
                android:visibility="visible"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/backButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="#FDD223"
                android:gravity="center"
                android:text="@string/backButton"
                android:textColor="@color/black"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
